bug: fix issue on mobile screen with contact component

--- a/src/App.css
+++ b/src/App.css
@@ -103,7 +103,7 @@ section {
   }
 
   #contact {
-    margin-top: 90rem;
+    margin-top: 85rem;
   }
 }
 
